Backend rotues and swagger has been updated.
